--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "amphp/process": "^2.0",
         "laravel-zero/framework": "^10.0.2",
         "laravel/prompts": "^0.1.0",
         "nunomaduro/termwind": "^1.15.1",
