--- a/garm.yaml
+++ b/garm.yaml
@@ -1,22 +1,28 @@
 name: garm
-php: 8.2.8
+php: 8.2.10
 
 services:
     - crazywhalecc/static-php-cli
 
 up:
-    - composer:
-          packages:
-              - humbug/box
-    - custom:
-          name: Install composer dependencies
-          met?: composer install
-    - custom:
-          name: Setup Static PHP
-          met?: |
-            PHP_PATH=$HOME/src/github.com/crazywhalecc/static-php-cli/buildroot/bin/php && test -f $PHP_PATH \
-            && $PHP_PATH -r 'version_compare(phpversion(), "8.2.10", ">=") ? exit(0) : exit(1);'
-          meet: ./scripts/build-static-cli
+  - herd:
+      php: 8.2.10
+      sites:
+        - garm
+  - brew:
+    - php@8.2
+  - composer:
+        packages:
+            - humbug/box
+  - custom:
+        name: Install composer dependencies
+        met?: composer install
+  - custom:
+        name: Setup Static PHP
+        met?: |
+          PHP_PATH=$SOURCE_ROOT/crazywhalecc/static-php-cli/buildroot/bin/php && test -f $PHP_PATH \
+          && $PHP_PATH -r 'version_compare(phpversion(), "8.2.10", ">=") ? exit(0) : exit(1);'
+        meet: ./scripts/build-static-cli
 commands:
     build-phar:
         desc: Build Garm binary
@@ -28,5 +34,5 @@ commands:
           cd $SOURCE_ROOT/crazywhalecc/static-php-cli && \
           php -d memory_limit=-1 bin/spc micro:combine $SOURCE_ROOT/bosunski/garm/build/garm.phar -O $SOURCE_ROOT/bosunski/garm/build/garm.bin
 sites:
-    _default_: https://www.facebook.com
+    _default_: google
     google: https://www.google.com
