--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -148,7 +148,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dev-${{ env.RUNNER_OS }}-${{ env.RUNNER_ARCH }}
+          name: dev-${{ runner.os }}-${{ runner.arch }}
           path: dist/dev
 
       # Upload cli executable
