--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,9 +1,6 @@
 name: CI on x86_64 macOS
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
     inputs:
       version:
@@ -17,6 +14,33 @@ on:
           - '8.1'
           - '8.0'
           - '7.4'
+      build-cli:
+        description: build cli binary
+        type: boolean
+        default: true
+      build-micro:
+        description: build phpmicro binary
+        type: boolean
+        default: true
+      build-fpm:
+        description: build fpm binary
+        type: boolean
+      extensions:
+        description: extensions to compile (comma separated)
+        required: true
+        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium"
+        type: string
+      debug:
+        description: debug build
+        type: boolean
+
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        description: php version to compile
+        type: string
+        default: '8.2'
       build-cli:
         description: build cli binary
         type: boolean
