--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           repo: bosunski/dev
-          branch: master
-          workflow: build-macos.yml
+          branch: main
+          workflow: build.yml
           name: "dev-macos-aarch64"
 
       - name: "Archive Executable"
