--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       version:
         required: true
-        description: php version to compile
+        description: PHP Version to Compile
         default: '8.2'
         type: choice
         options:
@@ -15,18 +15,18 @@ on:
           - '8.0'
           - '7.4'
       build-cli:
-        description: build cli binary
+        description: Build CLI Binary
         type: boolean
         default: true
       build-micro:
-        description: build phpmicro binary
+        description: Build PHPMicro Binary
         type: boolean
         default: true
       build-fpm:
-        description: build fpm binary
+        description: Build FPM Binary
         type: boolean
       extensions:
-        description: extensions to compile (comma separated)
+        description: Extensions to Compile (comma separated)
         required: true
         default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium"
         type: string
@@ -69,35 +69,30 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup PHP
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.2
           extensions: mbstring, bcmath
           tools: composer:v2
-
       - name: Checkout crazywhalecc/static-php-cli
         uses: actions/checkout@v4
         with:
           repository: crazywhalecc/static-php-cli
           path: spc
 
-      # Install macOS missing packages and mark os suffix
       - run: |
           brew tap box-project/box
           brew install automake gzip box
           echo "SPC_BUILD_OS=macos" >> $GITHUB_ENV
           box -v
 
-      # Cache composer dependencies
       - id: cache-composer-deps
         uses: actions/cache@v3
         with:
           path: vendor
           key: composer-dependencies
 
-      # If there's no Composer cache, install dependencies
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer install
 
@@ -105,7 +100,6 @@ jobs:
         run: |
           echo "SPC_EXTENSIONS_SHA256=$(echo -n ${{ inputs.extensions }} | shasum -a 256 | awk '{print $1}')" >> $GITHUB_ENV
 
-      # Cache downloaded source
       - id: cache-download
         uses: actions/cache/restore@v3
         with:
@@ -114,11 +108,9 @@ jobs:
             spc/buildroot
           key: php-${{ inputs.version }}-dependencies-${{ env.SPC_EXTENSIONS_SHA256 }}
 
-      # With or without debug
       - if: inputs.debug == true
         run: echo "SPC_BUILD_DEBUG=--debug" >> $GITHUB_ENV
 
-      # With target select: cli, micro or both
       - if: ${{ inputs.build-cli == true }}
         run: echo "SPC_BUILD_CLI=--build-cli" >> $GITHUB_ENV
       - if: ${{ inputs.build-micro == true }}
@@ -130,12 +122,10 @@ jobs:
         run: composer update --no-dev --classmap-authoritative
         working-directory: spc
 
-      # If there's no dependencies cache, fetch sources, with or without debug
       - if: steps.cache-download.outputs.cache-hit != 'true'
         run: ./bin/spc download --with-php=${{ inputs.version }} --for-extensions=${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }}
         working-directory: spc
 
-      # Run build command
       - if: steps.cache-download.outputs.cache-hit != 'true'
         run: ./bin/spc build ${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }} ${{ env.SPC_BUILD_CLI }} ${{ env.SPC_BUILD_MICRO }} ${{ env.SPC_BUILD_FPM }}
         working-directory: spc
@@ -159,53 +149,12 @@ jobs:
         run: |
             php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/dist/dev.phar -O $GITHUB_WORKSPACE/dist/dev
 
-#      - name: Convert OS Name
-#        id: os-type
-#        run: |
-#          OS=""
-#          if [ "${{ matrix.operating-system }}" = "ubuntu-latest" ]; then
-#              OS="linux-x86_64"
-#          elif [ "${{ matrix.operating-system }}" = "macos-latest" ]; then
-#              OS="macos-x86_64"
-#          elif [ "${{ matrix.operating-system }}" = "debian-arm64-self-hosted" ]; then
-#              OS="linux-aarch64"
-#          elif [ "${{ matrix.operating-system }}" = "macos-arm64-self-hosted" ]; then
-#              OS="macos-aarch64"
-#          fi
-#          echo "OS=$OS" >> $GITHUB_ENV
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: dev-macos-aarch64
           path: dist/dev
 
-      # Upload cli executable
-#      - if: ${{ inputs.build-cli == true }}
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: php-${{ inputs.version }}-${{ env.SPC_BUILD_OS }}
-#          path: spc/buildroot/bin/php
-
-      # Upload micro self-extracted executable
-#      - if: ${{ inputs.build-micro == true }}
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: micro-${{ inputs.version }}-${{ env.SPC_BUILD_OS }}
-#          path: spc/buildroot/bin/micro.sfx
-
-      # Upload fpm executable
-#      - if: ${{ inputs.build-fpm == true }}
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: php-fpm-${{ inputs.version }}-${{ env.SPC_BUILD_OS }}
-#          path: spc/buildroot/bin/php-fpm
-
-      # Upload extensions metadata
-      - uses: actions/upload-artifact@v3
-        with:
-          name: license-files
-          path: spc/buildroot/license/
       - uses: actions/upload-artifact@v3
         with:
           name: build-meta
