--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,15 @@
     ],
     "require": {
         "php": "^8.1",
+        "ext-pcntl": "*",
+        "ext-posix": "*",
         "amphp/process": "^2.0",
         "laravel-zero/framework": "^10.2.0",
+        "laravel-zero/phar-updater": "^1.3",
         "laravel/prompts": "^0.1.0",
         "nunomaduro/termwind": "^1.15",
-        "symfony/yaml": "^6.3",
-        "ext-pcntl": "*",
-        "ext-posix": "*"
+        "swoole/ide-helper": "^5.1",
+        "symfony/yaml": "^6.3"
     },
     "require-dev": {
         "laravel/pint": "^1.8",
